--- a/app/globals.css
+++ b/app/globals.css
@@ -70,3 +70,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+.hide-scrollbar{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar{
+  display:none
+}
